# JaiBox2DManual

./: .gitignore  README.md  asserts.jai  functions.jai  generate.bat  generate.jai  module-old.jai  module.jai  newstructs.jai  old-structs.jai  removestructs.jai  structs.jai
assertgen/: CMakeLists.txt  generate_asserts.bat  main.cpp
box2d/: CMakeLists.txt  build.bat  lib.cpp
box2d/Box2D/: CMakeLists.txt
box2d/Box2D/Box2D/Dynamics/Joints/: b2Joint.h
box2d/Box2D/include/box2d/: b2_block_allocator.h  b2_body.h  b2_chain_shape.h  b2_circle_shape.h  b2_common.h  b2_contact_manager.h  b2_draw.h  b2_edge_shape.h  b2_fixture.h  b2_free_list.h  b2_growable_buffer.h  b2_growable_stack.h  b2_intrusive_list.h  b2_math.h  b2_particle.h  b2_particle_assembly.h  b2_particle_group.h  b2_particle_system.h  b2_polygon_shape.h  b2_settings.h  b2_shape.h  b2_slab_allocator.h  b2_stack_allocator.h  b2_time_step.h  b2_tracked_block.h  b2_types.h  b2_voronoi_diagram.h  b2_world.h  box2d.h
box2d/Box2D/src/: CMakeLists.txt
box2d/Box2D/src/collision/: b2_chain_shape.cpp  b2_edge_shape.cpp  b2_polygon_shape.cpp  b2_time_of_impact.cpp
box2d/Box2D/src/common/: b2_block_allocator.cpp  b2_free_list.cpp  b2_settings.cpp  b2_stack_allocator.cpp
box2d/Box2D/src/dynamics/: b2_body.cpp  b2_contact_manager.cpp  b2_contact_solver.cpp  b2_world.cpp
box2d/Box2D/src/particle/: b2_particle.cpp  b2_particle_assembly.cpp  b2_particle_group.cpp  b2_particle_system.cpp  b2_voronoi_diagram.cpp
box2d/wrapper/: trash.h
box2d/wrapper/collision/: collision.cpp  collision.h
box2d/wrapper/collision/shapes/: chain_shape.cpp  chain_shape.h  circle_shape.cpp  circle_shape.h  edge_shape.cpp  edge_shape.h  polygon_shape.cpp  polygon_shape.h  shape.cpp  shape.h
box2d/wrapper/common/: draw.cpp  draw.h
box2d/wrapper/dynamics/: body.cpp  body.h  contact.cpp  contact.h  fixture.cpp  fixture.h  world.cpp  world.h  world_callbacks.cpp  world_callbacks.h
box2d/wrapper/dynamics/joints/: distance_joint.cpp  distance_joint.h  friction_joint.cpp  friction_joint.h  gear_joint.cpp  gear_joint.h  joint.cpp  joint.h  motor_joint.cpp  motor_joint.h  mouse_joint.cpp  mouse_joint.h  prismatic_joint.cpp  prismatic_joint.h  pulley_joint.cpp  pulley_joint.h  revolute_joint.cpp  revolute_joint.h  rope_joint.cpp  rope_joint.h  weld_joint.cpp  weld_joint.h  wheel_joint.cpp  wheel_joint.h
box2d/wrapper/particle/: particle.cpp  particle.h  particle_group.cpp  particle_group.h  particle_system.cpp  particle_system.h
test/: box2djai.lib  test.jai
